fixes margin on play again button on mobile

--- a/src/QuestionsList.css
+++ b/src/QuestionsList.css
@@ -23,8 +23,7 @@
   }
 
   .play-again {
-    margin-top: 0;
     display: block;
-    text-align: center;
+    margin: 0 auto;
   }
 }
